@@ -32,6 +32,9 @@ public final class Constants {
     public final static String VARIANT = "variant";
     public final static String PARALLAX = "parallax";
     public final static String SIZE = "size";
+
+    public final static String SETTINGS_CHANGED = "settings_changed";
+    public final static String CHANGES_APPLIED = "changes_applied";
   }
 
   public final static class DEF {
