@@ -1,5 +1,6 @@
 2.5.0:
-- Improved: show warning if current launcher is TouchWiz
+- New: Support for zoom effect on Android 11
+- Improved: show warning if default launcher is TouchWiz
 - Improved: haptic feedback in settings
 - Improved: animation efficiency by using frame rate of the device
 - Improved: sliders for customization
